maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:36: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(getDirection!=dir){
  ^PledgeMaze:39: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur){
  ^